<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rahal_description</name>
  <version>0.0.0</version>
  <description>ROS 2 package description for rahal_description .</description>
  <maintainer email="toqqaaessam@gmail.com">toqa</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Add these dependencies -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  <build_type>ament_cmake</build_type>
  <!-- Add these lines -->
  <ign gazebo_model_path="${prefix}"/>
  <ign gazebo_resource_path="${prefix}"/>
</export>
</package>